Add user list and detail pages

--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,5 +1,6 @@
 <nav>
     <ul>
         <li><NavLink href="" Match="NavLinkMatch.All">Home</NavLink></li>
+        <li><NavLink href="/users">Users</NavLink></li>
     </ul>
 </nav>
