--- a/Pages/_Imports.razor
+++ b/Pages/_Imports.razor
@@ -3,3 +3,4 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
 @using Blazor.POC
+@using Blazor.POC.Data
